kustomization/bases/server/server-cluster-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: server-set
spec:
  serviceName: "server-cluster"
  podManagementPolicy: Parallel
  replicas: 3
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: server
      containers:
        - name: server
          image: ghcr.io/skaramicke/tpl-phoenix-pg-k8s-tilt/server:latest
          ports:
            - containerPort: 4000
            - name: epmd
              containerPort: 4369
            - name: dist
              containerPort: 9000
