kustomization/bases/server/server-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: server
  ports:
    - name: http
      port: 4000
      targetPort: 4000
    - name: epmd
      port: 4369
      targetPort: 4369
    - name: dist
      port: 9000
      targetPort: 9000
