kustomization/bases/server/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gw
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: server.localtest.me # resolves to 127.0.0.1
      allowedRoutes:
        namespaces:
          from: Same
