kustomization/bases/server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: server-route
spec:
  parentRefs:
    - name: public-gw
  hostnames:
    - server.localtest.me
  rules:
    - backendRefs:
        - name: server-cluster
          port: 4000
